--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
         <div class="education">
             <h2>education</h2>
         </div>
+        <div class="education">
+            <h2>My Work</h2>
+            <div class="myWork">
+
+            </div>
+        </div>
     </section>
 </main>
 <footer>
