--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="#">
     <meta name='freelancehunt' content='da6f373e3112766'>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/duotone.css"
@@ -20,6 +21,8 @@
         <h1 class="head-name">
         </h1>
         <div class="g-info">
+
+            <button class="pdf_button"><img src="/img/free-icon-printer-8188145.png" alt=""></button>
         </div>
     </section>
 </header>
