--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>myCV</title>
     <link rel="icon" href="#">
     <meta name='freelancehunt' content='da6f373e3112766'>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/duotone.css"
@@ -56,6 +56,9 @@
         </div>
         <div class="experience">
             <h2>work experience</h2>
+            <div class="job-items">
+                
+            </div>
         </div>
         <div class="education">
             <h2>education</h2>
