--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             </div>
         </section>
     </footer>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/accordion.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/accordion.js"></script>
 </body>
 
 </html>
