--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <section class="container">
             <div class="socials">
             </div>
-            <button class="download_cv h4">Download CV<img src="assets/img/free-icon-printer-8188145.png" alt=""></button>
+            <button class="download_cv h4 pdf_button">Download CV<img src="assets/img/free-icon-printer-8188145.png" alt=""></button>
         </section>
     </footer>
     <script src="assets/js/main.js"></script>
