--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 <h1 class="header_name-title h1">Dmitriy Kadenyuk</h1>
             </div>
             <div class="header_position">
-                <h2 class="header_position-title h4">PHP developer
-                    /
-                    WordPress developer</h2>
+                <h2 class="header_position-title h4">PHP developer</h2>
                 <button class="pdf_button header_position-button"><img src="assets/img/free-icon-printer-8188145.png"
                         alt=""></button>
             </div>
