--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="accordion">
                 <div class="accordion-item myStory open">
                     <div class="accordion-item-header">
-                        <h2 class="h3 main_content_title">My short story</h2>
+                        <h2 class="h3 main_content_title">About me</h2>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-chevron-down accordion-item-header-icon">
@@ -67,6 +67,71 @@
                         <div class="accordion-item-description">
                             <hr>
                             <p></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item wordpress open">
+                    <div class="accordion-item-header">
+                        <h2 class="h3 main_content_title">Wordpress - <i>5 years of experience</i></h2>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-chevron-down accordion-item-header-icon">
+                            <path d="m6 9 6 6 6-6" />
+                        </svg>
+                    </div>
+                    <div class="accordion-item-description-wrapper">
+                        <div class="accordion-item-description">
+                            <hr>
+                            <h4>What I do</h4>
+                            <ul>
+                                <li>Creating custom themes</li>
+                                <li>Developing custom plugins</li>
+                                <li>Modifying and extending existing plugins and themes</li>
+                                <li>Website maintenance and updates</li>
+                                <li>Performance optimization (caching, queries, images)</li>
+                                <li>SEO optimization (technical and on-page)</li>
+                                <li>Security enhancements and hardening</li>
+                                <li>Integration with third-party APIs and services</li>
+                                <li>Testing and debugging (including WP_DEBUG and logs)</li>
+                                <li>Creating custom functions and shortcodes</li>
+                                <li>Advanced Custom Fields (ACF)</li>
+                                <li>WooCommerce customization and extensions</li>
+                                <li>Multilingual websites (WPML / Polylang)</li>
+                                <li>Custom post types and taxonomies</li>
+                                <li>REST API integration</li>
+                                <li>Elementor and other builders</li>
+                                <li>Version control (Git, Bitbucket, GitHub)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item laravel open">
+                    <div class="accordion-item-header">
+                        <h2 class="h3 main_content_title">Laravel - <i>1 years of experience</i></h2>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-chevron-down accordion-item-header-icon">
+                            <path d="m6 9 6 6 6-6" />
+                        </svg>
+                    </div>
+                    <div class="accordion-item-description-wrapper">
+                        <div class="accordion-item-description">
+                            <hr>
+                            <h4>What I do</h4>
+                            <ul>
+                                <li>Developing RESTful APIs</li>
+                                <li>Working with MVC architecture</li>
+                                <li>Database design and management (MySQL, migrations, seeders)</li>
+                                <li>Using Eloquent ORM for database operations</li>
+                                <li>Blade templating and dynamic views</li>
+                                <li>Form validation and request handling</li>
+                                <li>Integration with external APIs and services</li>
+                                <li>Using Middleware for request filtering and logic</li>
+                                <li>Error handling and logging</li>
+                                <li>Working with routes, controllers, and service layers</li>
+                                <li>Version control (Git, Bitbucket, GitHub)</li>
+                            </ul>
+
                         </div>
                     </div>
                 </div>
@@ -119,7 +184,8 @@
         <section class="container">
             <div class="socials">
             </div>
-            <button class="download_cv h4 pdf_button">Download CV<img src="assets/img/free-icon-printer-8188145.png" alt=""></button>
+            <button class="download_cv h4 pdf_button">Download CV<img src="assets/img/free-icon-printer-8188145.png"
+                    alt=""></button>
         </section>
     </footer>
     <script src="assets/js/main.js"></script>
